--- a/draw.html
+++ b/draw.html
@@ -38,17 +38,21 @@
       flex-direction:column;
       gap:10px;
     }
-
     .row{
-      display:grid;
-      grid-template-columns: 1fr 86px 46px 46px;
-      gap:8px;
-      align-items:center;
-      padding:12px;
-      border-radius:14px;
-      border:1px solid rgba(148,163,184,.22);
-      background:rgba(2,6,23,.45);
-    }
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+  padding:14px;
+  border-radius:16px;
+  border:1px solid rgba(148,163,184,.22);
+  background:rgba(2,6,23,.45);
+}
+
+.row-actions{
+  display:flex;
+  gap:10px;
+  align-items:center;
+}
 
     .row.header{
       font-size:.72rem;
