--- a/admin-draw.html
+++ b/admin-draw.html
@@ -48,8 +48,7 @@
     .draw-row{
       display:grid;
       grid-template-columns:
-        minmax(160px,2fr)
-        minmax(90px,1fr)
+        minmax(180px,2fr)
         84px
         64px
         52px;
@@ -86,18 +85,6 @@
       text-overflow:ellipsis;
     }
 
-    .draw-sub{
-      font-size:.72rem;
-      color:#9ca3af;
-      margin-top:2px;
-    }
-
-    .draw-phone{
-      font-size:.8rem;
-      opacity:.85;
-      white-space:nowrap;
-    }
-
     .sectorPick{
       width:72px;
       padding:6px 6px;
@@ -109,10 +96,6 @@
       display:flex;
       align-items:center;
       justify-content:center;
-      gap:6px;
-      font-size:.72rem;
-      font-weight:900;
-      color:#facc15;
     }
 
     .chk{
@@ -133,31 +116,22 @@
     }
 
     /* ============ MOBILE ============ */
-
     @media (max-width:740px){
-      .draw-head{
-        grid-template-columns: 1.9fr 74px 52px 48px;
-      }
-
+      .draw-head,
       .draw-row{
-        grid-template-columns: 1.9fr 74px 52px 48px;
-        font-size:12px;
+        grid-template-columns: 1.8fr 64px 48px 42px;
       }
-
-      .hide-sm{ display:none; }
 
       .draw-team{ font-size:13px; }
-      .draw-sub{ font-size:11px; }
 
       .sectorPick{
-        width:60px;
-        padding:5px 6px;
+        width:58px;
         font-size:12px;
       }
 
       .btn-icon{
-        width:38px;
-        height:38px;
+        width:36px;
+        height:36px;
         font-size:15px;
       }
     }
@@ -190,8 +164,8 @@
       </div>
 
       <div class="field">
-        <div class="muted">Пошук (команда / телефон / капітан)</div>
-        <input id="q" class="input" placeholder="Напр.: DK Два Кума / 063…" />
+        <div class="muted">Пошук команди</div>
+        <input id="q" class="input" placeholder="Назва команди…" />
       </div>
     </div>
 
@@ -204,7 +178,6 @@
 
       <div class="draw-head">
         <div>Команда</div>
-        <div class="hide-sm">Телефон</div>
         <div>Сектор</div>
         <div>BF</div>
         <div></div>
@@ -221,10 +194,7 @@
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 
-<!-- init -->
 <script src="assets/js/firebase-init.js"></script>
-
-<!-- draw logic -->
 <script src="assets/js/draw_admin.js"></script>
 
 </body>
