--- a/admin-draw.html
+++ b/admin-draw.html
@@ -142,14 +142,10 @@
     padding:4px 6px;
   }
 
-  .bf-wrap{
-    display:flex;
-    justify-content:center;
-  }
-
   .chk{
     width:18px;
     height:18px;
+    margin:auto;
   }
 
   .btn-icon{
