Add QR access link for judges in admin panel

--- a/admin.html
+++ b/admin.html
@@ -218,6 +218,10 @@
           <a class="btn btn--danger"  href="admin-weigh.html">5) Зважування (адмін)</a>
 
           <a class="btn btn--primary" href="admin-accounts.html">6) Акаунт STOLAR CARP</a>
+
+          <a class="btn btn--accent" href="judge_qr_admin.html">
+  📱 QR-доступ для суддів
+          </a>
         </div>
       </div>
 
