--- a/register.html
+++ b/register.html
@@ -313,7 +313,7 @@
           </div>
 
           <div class="field">
-            <label>Харчування від організаторів? <span style="color:var(--accent);">*</span></label>
+            <label>Харчування<span style="color:var(--accent);">*</span></label>
             <div class="radio-row">
               <label><input type="radio" name="food" value="Так" required> <span>Так</span></label>
               <label><input type="radio" name="food" value="Ні"> <span>Ні</span></label>
