--- a/rules.html
+++ b/rules.html
@@ -60,7 +60,7 @@
     <ul>
       <li>Формат: <strong>«зловив — відпустив»</strong> (Catch &amp; Release).</li>
       <li>Ціль: розвиток спортивного карпфішингу, безпека та гуманне ставлення до риби.</li>
-      <li>Учасники зобов’язані виконувати вимоги організатора та суддів.</li>
+      <li>Учасники зобов’язані виконувати вимоги регламенту.</li>
       <li>Спірні питання вирішує головний суддя.</li>
     </ul>
 
@@ -72,7 +72,7 @@
 
     <h3>1. Формат участі</h3>
     <ul>
-      <li><strong>Командний формат:</strong> 2–3 повноцінних учасники.</li>
+      <li><strong>Командний формат:</strong> 1–3 повноцінних учасники.</li>
       <li><strong>STALKER (соло, якщо оголошено):</strong> тільки 1 учасник у секторі.</li>
       <li>Регламент діє однаково для командного та соло-формату.</li>
     </ul>
@@ -100,7 +100,7 @@
         <ul>
           <li>У секторі дозволено мати необмежену кількість запасних вудилищ.</li>
           <li><strong>Одночасно в воді — не більше 2 робочих вудилищ.</strong></li>
-          <li>Монтаж-оснастка — <strong>не більше 1 гачка</strong>.</li>
+          <li>Монтаж-оснастка — <strong>не більше 1 гачка на вудилище</strong>.</li>
           <li><strong>Заборонено закидати третє робоче вудилище</strong>, доки одне з двох робочих не вимотане.</li>
         </ul>
       </li>
@@ -114,7 +114,7 @@
 
       <li><strong>Ліска та шок-лідер:</strong>
         <ul>
-          <li>Основна волосінь — <strong>не менше 0.23 мм</strong>.</li>
+          <li>Основна волосінь — <strong>не менше 0.25 мм</strong>.</li>
           <li>Шок-лідер дозволено <strong>не більше 10 м</strong>.</li>
           <li>Шнур — <strong>Заборонено використання в якості основної волосіні</strong>.</li>
         </ul>
@@ -122,9 +122,10 @@
 
       <li><strong>Дозволені монтажі:</strong>
         <ul>
-          <li><strong>Класичні коропові</strong> та <strong>флет-Method</strong>.</li>
+          <li><strong>Класика</strong> та <strong>флет-Method</strong>.</li>
           <li>Монтажі мають відповідати принципу <strong>безпечного звільнення риби</strong> від грузу/годівниці у випадку обриву.</li>
           <li>Флет — лише у безпечному виконанні.</li>
+          <li>Використання оснастки вертоліт та гарбуза <strong>забороняється</strong>.</li>
         </ul>
       </li>
 
@@ -141,6 +142,7 @@
     <h3>5. Годування</h3>
     <ul>
       <li><strong>Спомб:</strong> дозволено лише у світлий час, який визначає організатор.</li>
+      <li><strong>Закорм:</strong> дозволено годування одночасно у 2 спомби.</li>
       <li><strong>Кобра:</strong> дозволена цілодобово.</li>
       <li><strong>Spomb:</strong> дозволені <strong>Mini</strong> та <strong>MidiX</strong>. Використання <strong>Large</strong> забороняється.</li>
       <li><strong>Жива насадка — заборонена!!!</strong></li>
@@ -149,6 +151,7 @@
 
     <h3>6. Порядок зважування та гуманне поводження</h3>
     <ul>
+      <li>Кількість та час проведення зважувань <strong> визначаються організатором і можуть змінюватися залежно від умов змагань. </strong>.</li>
       <li>Зважування проводиться <strong>лише в присутності судді</strong>.</li>
       <li>Команда зобов’язана: витягнути мішок та допомогти судді у зважуванні, після чого <strong>відпустити рибу</strong>.</li>
       <li><strong>Заборонено</strong> тримати більше <strong>1 риби</strong> в одному короповому мішку.</li>
