--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
     <div class="hero-season-card">
       <h2 class="title-gradient">🏆 Сезон STOLAR CARP </h2>
       <p>
-        Слідкуй за всіма етапами та Фіналом в одному місці.
+        Слідкуй за всіма змаганнями в одному місці.
         Архів, Live результати та підсумковий рейтинг команд.
       </p>
       <a href="events/index.html" class="btn btn--primary btn-lg">
@@ -473,11 +473,11 @@
   </p>
 
     <ul class="info-list">
-      <li>• Команди з 2–3 учасників</li>
+      <li>• Команди з 1–3 учасників</li>
       <li>• Початківці та аматори, які хочуть пройти свій перший турнір</li>
       <li>• Досвідчені рибалки та спортивні команди</li>
       <li>• Риболовні клуби та спільноти</li>
-      <li>• Ті, хто готовий пройти сезон із етапів та гранд-фіналом</li>
+      <li>• Ті, хто готовий позмагатися</li>
     </ul>
   </section>
 
@@ -486,9 +486,8 @@
       Місія <span class="section-title__brand">STOLAR CARP</span>
     </h2>
     <p class="info-text">
-      Ми створили новий стандарт коропових турнірів в Україні: організований, 
-      прозорий та створений для розвитку та популяризацію карпфішингу як сучасний вид спорту. Кожне змагання — це не лише боротьба 
-      за кубок, а й зустріч однодумців на березі водойми.
+       о
+      Місія - забезпечити чесні та прозорі коропові змагання завдяки сучасному підходу до фіксації результатів і чіткій організації роботи суддів.
     </p>
 
     <div class="mission-cards">
@@ -502,7 +501,7 @@
   <section class="section container info-block">
     <h2 class="section-title">Структура сезону</h2>
     <p class="info-text">
-      Сезон STOLAR CARP складається з рейтингових етапів. 
+      У сезоні: STalker, 3 таблиці, Осінній короп та турнір STOLAR CARP,який складається з рейтингових етапів. 
       Команди набирають бали на кожному з них, а за підсумком сезону найкращі потрапляють 
       у Великий Фінал, де і визначається Чемпіон сезону.
     </p>
@@ -539,7 +538,7 @@
       <li>Незалежне суддівство та інноваційний цифровий контроль.</li>
       <li>Онлайн-результати 24/7: live-протоколи та рейтинг команд</li>
       <li>Жеребкування секторів у відкритому форматі</li>
-      <li>Big Fish, окремі номінації та фінальний кубок</li>
+      <li>Big Fish Total, окремі номінації та фінальний кубок</li>
       <li>Дружня атмосфера та сильна спільнота учасників</li>
     </ul>
   </section>
