--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     </h2>
     <p class="info-text">
        
-      Місія - забезпечити чесні та прозорі коропові змагання завдяки сучасному підходу до фіксації результатів і чіткій організації роботи суддів.
+      Місія - забезпечити чесні та прозорі змагання завдяки сучасному підходу до фіксації результатів і чіткій організації роботи суддів.
     </p>
 
     <div class="mission-cards">
