--- a/register.html
+++ b/register.html
@@ -344,7 +344,7 @@
           <div id="msg" class="form-msg"></div>
 
           <p class="form__hint" style="margin-top:6px;">
-            Після подачі заявки організатор бачить її в адмінці та підтверджує участь після оплати внеску.
+            Після подачі заявки участь підтверджується після оплати внеску.
           </p>
         </form>
       </div>
