--- a/rules.html
+++ b/rules.html
@@ -52,7 +52,7 @@
 
     <h3>Організація Джек-потів “Big Fish Total”</h3>
     <p>
-      Проводиться за бажанням учасників. Участь є добровільною. Призовий фонд формується з внесків учасників.
+      Проводиться за бажанням учасників та оплати повного пакету. Участь є добровільною. Призовий фонд формується з внесків учасників. 
       <strong>Організатор залишає за собою право утримувати частину коштів на організаційні та адміністративні витрати.</strong>
     </p>
 
@@ -60,7 +60,7 @@
     <ul>
       <li>Формат: <strong>«зловив — відпустив»</strong> (Catch &amp; Release).</li>
       <li>Ціль: розвиток спортивного карпфішингу, безпека та гуманне ставлення до риби.</li>
-      <li>Учасники зобов’язані виконувати вимоги регламенту.</li>
+      <li>Учасники зобов’язані виконувати вимоги водойми та регламенту .</li>
       <li>Спірні питання вирішує головний суддя.</li>
     </ul>
 
@@ -94,13 +94,13 @@
     <h3>4. Правила лову та оснащення</h3>
     <ul>
       <li><strong>Заборонено використання будь-яких застібок та вертлюгів у складі робочих монтажів.</strong></li>
-      <li><strong>Довжина вудилищ:</strong> не більше <strong>4.5 м</strong>.</li>
+      <li><strong>Довжина вудилищ:</strong> не більше <strong>4.57 м</strong>.</li>
 
       <li><strong>Вудилища:</strong>
         <ul>
           <li>У секторі дозволено мати необмежену кількість запасних вудилищ.</li>
-          <li><strong>Одночасно в воді — не більше 2 робочих вудилищ.</strong></li>
-          <li>Монтаж-оснастка — <strong>не більше 1 гачка на вудилище</strong>.</li>
+          <li><strong>Одночасно в воді і на род-поді — не більше 2 робочих вудилищ.</strong></li>
+          <li>Оснащеними— <strong>не більше 1 гачка на вудилище</strong>.</li>
           <li><strong>Заборонено закидати третє робоче вудилище</strong>, доки одне з двох робочих не вимотане.</li>
         </ul>
       </li>
@@ -116,27 +116,27 @@
         <ul>
           <li>Основна волосінь — <strong>не менше 0.25 мм</strong>.</li>
           <li>Шок-лідер дозволено <strong>не більше 10 м</strong>.</li>
-          <li>Шнур — <strong>Заборонено використання в якості основної волосіні</strong>.</li>
+          <li>Шнур — <strong>Заборонено використання в якості основної волосіні для робочих вудилищ</strong>.</li>
         </ul>
       </li>
 
       <li><strong>Дозволені монтажі:</strong>
         <ul>
-          <li><strong>Класика</strong> та <strong>флет-Method</strong>.</li>
+          <li><strong>Класика</strong> та <strong>флет</strong>.</li>
           <li>Монтажі мають відповідати принципу <strong>безпечного звільнення риби</strong> від грузу/годівниці у випадку обриву.</li>
-          <li>Флет — лише у безпечному виконанні.</li>
-          <li>Використання оснастки вертоліт та гарбуза <strong>забороняється</strong>.</li>
+          <li>Флет-годівниця або вантаж при використанні лідкору повинні мати вільний хід по лідкору та скидатися у разі обриву оснастки.</li>
+          <li>Використання оснастки вертоліт, гарбуз, годівниці<strong>забороняється</strong>.</li>
         </ul>
       </li>
 
       <li><strong>Заборонено:</strong>
         <ul>
           <li>Кораблики/човни та будь-які плавзасоби для завозу оснасток і прикорму.</li>
-          <li><strong>Дозволяється</strong> зайти у воду <strong>не далі 20 метрів</strong> від берега <strong>1 учаснику</strong> для <strong>підсачування риби</strong>.</li>
+          <li><strong>Дозволяється</strong> зайти у воду <strong>не далі 20 метрів</strong> від берега <strong> учаснику</strong> для <strong>підсачування риби</strong>.</li>
         </ul>
       </li>
 
-      <li><strong>Дозволяється зайти у воду перед стартом змагань</strong> для перевірки/очистки сектора від коряг і зачепів.</li>
+      <li><strong>Можна зайти у воду перед стартом змагань</strong> для перевірки/очистки сектора від коряг і зачепів.</li>
     </ul>
 
     <h3>5. Годування</h3>
@@ -144,7 +144,7 @@
       <li><strong>Спомб:</strong> дозволено лише у світлий час, який визначає організатор.</li>
       <li><strong>Закорм:</strong> дозволено годування одночасно у 2 спомби.</li>
       <li><strong>Кобра:</strong> дозволена цілодобово.</li>
-      <li><strong>Spomb:</strong> дозволені <strong>Mini</strong> та <strong>MidiX</strong>. Використання <strong>Large</strong> забороняється.</li>
+      <li><strong>Spomb:</strong> дозволені малого та середнього розміру<strong>Mini</strong> та <strong>MidiX</strong>. Використання <strong>Large</strong> забороняється.</li>
       <li><strong>Жива насадка — заборонена!!!</strong></li>
       <li><strong>ТИГРОВИЙ ГОРІХ:</strong> дозволено використовувати <strong>лише МЕЛЕНИЙ</strong> (подрібнений через м’ясорубку).</li>
     </ul>
@@ -164,7 +164,8 @@
       </li>
       <li><strong>Риба 10+ кг</strong> — обов’язково виклик судді.</li>
       <li><strong>2 амури</strong> — обов’язково виклик судді.</li>
-      <li>Фото/зважування без судді — забороняється.</li>
+      <li>Фото/зважування без судді — забороняється. </li>
+      <li>Тільки при підозрі, що вага риби становить 10+ кг, команда може попередньо зважити улов </li>
     </ul>
 
     <h3>Гості та глядачі</h3>
@@ -174,7 +175,7 @@
 
     <h3>Правила та Fair play</h3>
     <ul>
-      <li>Після сигналу завершення змагань (свистка) учасникам надається <strong>15 хвилин</strong> для завершення <strong>виважування риби</strong>, яка клюнула <strong>до сигналу</strong>.</li>
+      <li>Після сигналу завершення змагань учасникам надається <strong>15 хвилин</strong> для завершення <strong>виважування риби</strong>, яка клюнула <strong>до сигналу.При цьому повідомивши сусіда чи суддю</strong>.</li>
       <li>Якщо під час виважування риба зайшла в сектор сусідньої команди, заплуталася або перетнула вудилища сусідів, <strong>дозволяється за згодою сусідньої команди</strong> зайти для <strong>вивільнення оснастки або риби</strong>.</li>
       <li><strong>Підсачування та завершення виважування здійснюється виключно у своєму секторі.</strong></li>
     </ul>
@@ -183,7 +184,7 @@
     <ul>
       <li>Тиша, порядок та чистота у секторі — обов’язкові.</li>
       <li>Заборонені конфлікти, агресія, маніпуляції, приховування риби під час зважування.</li>
-      <li>Порушення етики — жовта або червона картка. Дві жовті = дискваліфікація.</li>
+      <li>Порушення етики — жовта або червона картка. Три усні попередження жовта. Дві жовті = дискваліфікація.</li>
     </ul>
 
     <table class="table">
@@ -194,18 +195,19 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>Вихід за межі сектору без дозволу</td><td>Попередження</td></tr>
+        <tr><td>Годування цілим тигровим горіхом</td><td>Жовта картка</td></tr>
+        <tr><td>Порушення часу годування та задіяння більше 2 спомбів, </td><td>Жовта картка</td></tr>
         <tr><td>Ловля/годування за межами свого сектору</td><td>Жовта картка</td></tr>
         <tr><td>Недбале поводження з рибою</td><td>Жовта/Червона (за рішенням судді)</td></tr>
         <tr><td>Заборонена оснастка / порушення правил годування</td><td>Жовта/Червона</td></tr>
         <tr><td>Алкоголь у великих дозах, агресія</td><td>Миттєва дискваліфікація</td></tr>
-        <tr><td>Фото/зважування без судді</td><td>Жовта</td></tr>
+        <tr><td>Фото без судді</td><td>Жовта</td></tr>
       </tbody>
     </table>
 
     <h3>9. Протести</h3>
     <ul>
-      <li>Протест подається головному судді протягом <strong>30 хвилин</strong> після інциденту.</li>
+      <li>Протест подається головному судді або організатору змагань протягом <strong>30 хвилин</strong> після інциденту.</li>
       <li>Без доказів протест може бути не розглянутий.</li>
       <li>Рішення суддів — остаточне.</li>
     </ul>
