--- a/rules.html
+++ b/rules.html
@@ -72,6 +72,7 @@
 
     <h3>1. Формат участі</h3>
     <ul>
+      <li><strong>Відповідальність за дотримання регламенту несе вся команда.</strong>Порушення регламенту одним учасником тягне відповідальність для всієї команди.</li>
       <li><strong>Командний формат:</strong> 1–3 повноцінних учасники.</li>
       <li><strong>STALKER (соло, якщо оголошено):</strong> тільки 1 учасник у секторі.</li>
       <li>Регламент діє однаково для командного та соло-формату.</li>
@@ -87,6 +88,8 @@
 
     <h3>3. Залік і визначення переможців</h3>
     <ul>
+      <li>Кубки: <strong>1, 2, 3 місце</strong>по кожній зоні</li>
+      <li>Нагороди: <strong>BigFish</strong>найбільший короп та амур</li>
       <li>Залік: <strong>загальна вага улову</strong> за змагання.</li>
       <li>При однаковій вазі виграє <strong>Big Fish</strong> команди.</li>
     </ul>
