--- a/rules.html
+++ b/rules.html
@@ -88,8 +88,8 @@
 
     <h3>3. Залік і визначення переможців</h3>
     <ul>
-      <li>Кубки: <strong>1, 2, 3 місце</strong>по кожній зоні</li>
-      <li>Нагороди: <strong>BigFish</strong>найбільший короп та амур</li>
+      <li>Кубки: <strong> 1, 2, 3 місце </strong> по кожній зоні</li>
+      <li>Нагороди: <strong>BigFish </strong> найбільший короп та амур</li>
       <li>Залік: <strong>загальна вага улову</strong> за змагання.</li>
       <li>При однаковій вазі виграє <strong>Big Fish</strong> команди.</li>
     </ul>
@@ -110,7 +110,7 @@
 
       <li><strong>Маркеріння:</strong>
         <ul>
-          <li>Дозволено використання маркера <strong>не виймаючи 2 робочих удилищ</strong>.</li>
+          <li>Дозволено використання маркера <strong> не виймаючи 2 робочих удилищ</strong>.</li>
           <li>Маркеріння дозволено після заїзду у сектор та до фінішу.</li>
         </ul>
       </li>
@@ -126,16 +126,16 @@
       <li><strong>Дозволені монтажі:</strong>
         <ul>
           <li><strong>Класика</strong> та <strong>флет</strong>.</li>
-          <li>Монтажі мають відповідати принципу <strong>безпечного звільнення риби</strong> від грузу/годівниці у випадку обриву.</li>
+          <li>Монтажі мають відповідати принципу <strong> безпечного звільнення риби</strong> від грузу/годівниці у випадку обриву.</li>
           <li>Флет-годівниця або вантаж при використанні лідкору повинні мати вільний хід по лідкору та скидатися у разі обриву оснастки.</li>
-          <li>Використання оснастки вертоліт, гарбуз, годівниці<strong>забороняється</strong>.</li>
+          <li>Використання оснастки вертоліт, гарбуз, годівниці <strong> забороняється</strong>.</li>
         </ul>
       </li>
 
       <li><strong>Заборонено:</strong>
         <ul>
           <li>Кораблики/човни та будь-які плавзасоби для завозу оснасток і прикорму.</li>
-          <li><strong>Дозволяється</strong> зайти у воду <strong>не далі 20 метрів</strong> від берега <strong> учаснику</strong> для <strong>підсачування риби</strong>.</li>
+          <li><strong>Дозволяється</strong> зайти у воду <strong>не далі 20 метрів</strong> від берега <strong> та не вище рівня грудей </strong> для <strong>підсачування риби</strong>.</li>
         </ul>
       </li>
 
@@ -147,7 +147,7 @@
       <li><strong>Спомб:</strong> дозволено лише у світлий час, який визначає організатор.</li>
       <li><strong>Закорм:</strong> дозволено годування одночасно у 2 спомби.</li>
       <li><strong>Кобра:</strong> дозволена цілодобово.</li>
-      <li><strong>Spomb:</strong> дозволені малого та середнього розміру<strong>Mini</strong> та <strong>MidiX</strong>. Використання <strong>Large</strong> забороняється.</li>
+      <li><strong>Spomb:</strong> дозволені малого та середнього розміру <strong>Mini</strong> та <strong>MidiX</strong>. Використання <strong>Large</strong> забороняється.</li>
       <li><strong>Жива насадка — заборонена!!!</strong></li>
       <li><strong>ТИГРОВИЙ ГОРІХ:</strong> дозволено використовувати <strong>лише МЕЛЕНИЙ</strong> (подрібнений через м’ясорубку).</li>
     </ul>
@@ -167,6 +167,7 @@
       </li>
       <li><strong>Риба 10+ кг</strong> — обов’язково виклик судді.</li>
       <li><strong>2 амури</strong> — обов’язково виклик судді.</li>
+      <li><strong>10 мішків з рибою</strong> — обов’язково виклик судді.</li>
       <li>Фото/зважування без судді — забороняється. </li>
       <li>Тільки при підозрі, що вага риби становить 10+ кг, команда може попередньо зважити улов </li>
     </ul>
@@ -178,9 +179,9 @@
 
     <h3>Правила та Fair play</h3>
     <ul>
-      <li>Після сигналу завершення змагань учасникам надається <strong>15 хвилин</strong> для завершення <strong>виважування риби</strong>, яка клюнула <strong>до сигналу.При цьому повідомивши сусіда чи суддю</strong>.</li>
+      <li>Після сигналу фінішу команда має <strong>15 хвилин</strong> для завершення виважування риби, що клюнула <strong>до сигналу</strong>, за умови попереднього повідомлення судді або сусідньої команди; інакше риба в залік <strong>не зараховується</strong>.</li>
       <li>Якщо під час виважування риба зайшла в сектор сусідньої команди, заплуталася або перетнула вудилища сусідів, <strong>дозволяється за згодою сусідньої команди</strong> зайти для <strong>вивільнення оснастки або риби</strong>.</li>
-      <li><strong>Підсачування та завершення виважування здійснюється виключно у своєму секторі.</strong></li>
+      <li><strong>Підсачування здійснюється виключно у своєму секторі.</strong></li>
     </ul>
 
     <h3>8. Дисципліна та штрафи</h3>
