--- a/rules.html
+++ b/rules.html
@@ -170,6 +170,7 @@
       <li><strong>2 амури</strong> — обов’язково виклик судді.</li>
       <li><strong>10 мішків з рибою</strong> — обов’язково виклик судді.</li>
       <li>Фото/зважування без судді — забороняється. </li>
+      <li> Під час фотозйомки риба повинна знаходитися на мінімальній висоті тільки над короповим матом </li>
       <li>Тільки при підозрі, що вага риби становить 10+ кг, команда може попередньо зважити улов </li>
     </ul>
 
