--- a/rules.html
+++ b/rules.html
@@ -37,7 +37,7 @@
   <section class="container section">
     <h1 class="title-gradient">Регламент змагань STOLAR CARP</h1>
 
-    <h3>Регламент водойми</h3>
+    <h3>Регламент водойми обов'язковий</h3>
     <ul>
       <li><strong>Регламент та правила водойми є обов’язковими до виконання</strong> для всіх учасників, гостей та осіб, що перебувають у секторі.</li>
       <li>У разі розбіжностей між регламентом змагань та регламентом водойми <strong>пріоритет має регламент водойми</strong>.</li>
