--- a/rules.html
+++ b/rules.html
@@ -84,7 +84,9 @@
       <li>Сектори/зони визначаються жеребкуванням.</li>
       <li>Розклад (заїзд, старт, фініш, нагородження) публікується на сайті та у групі вайбер.</li>
       <li><strong>Дистанція лову</strong> оголошується та фіксується <strong>до жеребкування</strong> і є обов’язковою.</li>
-      <li>Заборонено їздити автомобілем по береговій лінії від старту до фінішу.</li>
+      <li>Учасникам заборонено їздити автомобілем по береговій лінії від старту до фінішу.</li>
+      <li>Винятки допускаються лише у форс-мажорних обставинах і виключно за згодою судді</li>
+      <li>Заїзд гостей у сектор автомобілем </strong>заборонено</strong></li>
     </ul>
 
     <h3>3. Залік і визначення переможців</h3>
