--- a/rules.html
+++ b/rules.html
@@ -179,6 +179,7 @@
     <h3>Гості та глядачі</h3>
     <ul>
       <li><strong>Знаходження гостей і глядачів в зоні проведення змагань дозволено тільки в світлий час доби.</strong></li>
+      <li>Заїзд гостей у сектор автомобілем <strong>заборонено</strong>.</li>
     </ul>
 
     <h3>Правила та Fair play</h3>
