--- a/rules.html
+++ b/rules.html
@@ -90,12 +90,18 @@
     </ul>
 
     <h3>3. Залік і визначення переможців</h3>
+<ul>
+  <li>Призові місця визначаються окремо по кожній зоні:
     <ul>
-      <li>Кубки: <strong> 1, 2, 3 місце </strong> по кожній зоні</li>
-      <li>Нагороди: <strong>BigFish </strong> найбільший короп та амур</li>
-      <li>Залік: <strong>загальна вага улову</strong> за змагання.</li>
-      <li>При однаковій вазі виграє <strong>Big Fish</strong> команди.</li>
+      <li><strong>Зона А:</strong> 1, 2, 3 місце</li>
+      <li><strong>Зона В:</strong> 1, 2, 3 місце</li>
+      <li><strong>Зона С:</strong> 1, 2, 3 місце</li>
     </ul>
+  </li>
+  <li>Окремо визначаються переможці в номінації <strong>Big Fish</strong> — найбільший <strong>КОРОП</strong> та найбільший <strong>АМУР</strong>.</li>
+  <li>Основний залік здійснюється за <strong>загальною вагою улову</strong> за весь період змагань.</li>
+  <li>При однаковій загальній вазі перевага надається команді, що має <strong>більшу рибу (Big Fish)</strong>.</li>
+</ul>
 
     <h3>4. Правила лову та оснащення</h3>
     <ul>
